--- a/kaseb-io/styles/banner.scss
+++ b/kaseb-io/styles/banner.scss
@@ -1,4 +1,4 @@
-.kio.banner {
+.kio-banner {
 	z-index: 999999;
 	background-color: #ffbf00;
 	position: fixed;
@@ -8,15 +8,15 @@
 	padding-top: 1rem;
 	padding-bottom: 1rem;
 
-	&.kio.top-banner {
+	&.kio-top-banner {
 		top: 0;
 	}
 
-	&.bottom-banner {
+	&.kio-bottom-banner {
 		bottom: 0;
 	}
 
-	.btn {
+	.kio-btn {
 		display: inline-block;
 		margin-top: 10px;
 		padding: 10px;
@@ -26,7 +26,7 @@
 		text-decoration: none;
 	}
 
-	.close-btn {
+	.kio-close-btn {
 		position: fixed;
 		right: 20px;
 		top: 20px;
@@ -37,7 +37,7 @@
 		padding: 5px 10px;
 	}
 
-	.close-btn:hover {
+	.kio-close-btn:hover {
 		background-color: #fff;
 		color: #333;
 	}
