--- a/kaseb-xyz/styles/banner.scss
+++ b/kaseb-xyz/styles/banner.scss
@@ -19,26 +19,60 @@
 	.kio-btn {
 		display: inline-block;
 		margin-top: 10px;
-		padding: 10px;
-		border-radius: 5px;
+		padding: 2px 10px;
+		border-radius: 7px;
 		color: #fff;
 		background-color: #0080ff;
 		text-decoration: none;
 	}
 
 	.kio-close-btn {
-		position: fixed;
-		right: 20px;
-		top: 20px;
+		position: absolute;
+		right: 10px;
+		top: 10px;
 		background-color: #333;
 		cursor: pointer;
 		color: #fff;
-		border-radius: 5px;
-		padding: 5px 10px;
+		border-radius: 7px;
+		padding: 2px 10px;
+		border: none;
 	}
 
 	.kio-close-btn:hover {
 		background-color: #fff;
 		color: #333;
 	}
+
+	.kio-logo {
+		display: block;
+		background-color: rgba(0,0,0,0.3);
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		border-radius: 0 10px 0 0;
+		transition: 0.2s;
+		text-decoration: none;
+		border: none;
+		color: #fff;
+		width: 30px;
+		min-height: 20px;
+		overflow: hidden;
+		&:hover {
+			width: 90px;
+		}
+		&:hover::after {
+			content: "ASEB";
+		}
+	}
 }
+
+
+.kio-banner.is-rtl {
+	.kio-logo {
+		left: unset;
+		right: 0;
+		border-radius: 10px 0 0 0;
+	}
+}
+
+
