--- a/kaseb-xyz/styles/banner.scss
+++ b/kaseb-xyz/styles/banner.scss
@@ -20,7 +20,7 @@
 		display: inline-block;
 		margin-top: 10px;
 		padding: 2px 10px;
-		border-radius: 7px;
+		border-radius: 5px;
 		color: #fff;
 		background-color: #0080ff;
 		text-decoration: none;
@@ -28,50 +28,21 @@
 
 	.kio-close-btn {
 		position: absolute;
-		right: 10px;
+		left: 10px;
 		top: 10px;
-		background-color: #333;
+		background-color: rgba(255, 255, 255, 0.05);
+		transition: all 0.2s ease;
 		cursor: pointer;
-		color: #fff;
-		border-radius: 7px;
-		padding: 2px 10px;
+		color: rgba(0, 0, 0, 0.5);
+		border-radius: 50%;
+		padding: 3px;
 		border: none;
+		width: 30px;
 	}
 
 	.kio-close-btn:hover {
 		background-color: #fff;
 		color: #333;
-	}
-
-	.kio-logo {
-		display: block;
-		background-color: rgba(0,0,0,0.3);
-		position: absolute;
-		left: 0;
-		bottom: 0;
-		border-radius: 0 10px 0 0;
-		transition: 0.2s;
-		text-decoration: none;
-		border: none;
-		color: #fff;
-		width: 30px;
-		min-height: 20px;
-		overflow: hidden;
-		&:hover {
-			width: 90px;
-		}
-		&:hover::after {
-			content: "ASEB";
-		}
-	}
-}
-
-
-.kio-banner.is-rtl {
-	.kio-logo {
-		left: unset;
-		right: 0;
-		border-radius: 10px 0 0 0;
 	}
 }
 
