--- a/kaseb-xyz/styles/logo.scss
+++ b/kaseb-xyz/styles/logo.scss
@@ -1,4 +1,5 @@
 .kio-logo {
+	box-sizing: border-box;
 	display: block;
 	background-color: rgba(0, 0, 0, 0.3);
 	position: absolute;
@@ -9,7 +10,7 @@
 	transition: all 0.2s ease;
 	text-decoration: none;
 	border: none;
-	width: 40px;
+	width: 50px;
 	min-height: 20px;
 	overflow: hidden;
 	path {
