--- a/kaseb-xyz/styles/banner.scss
+++ b/kaseb-xyz/styles/banner.scss
@@ -1,16 +1,17 @@
 .kio-banner {
 	z-index: 999999;
-	background-color: #ffbf00;
 	position: fixed;
 	left: 0;
 	right: 0;
 	text-align: center;
+	min-height: 80px;
 	padding-top: 1rem;
 	padding-bottom: 1rem;
 	display: flex;
-	flex-direction: row-reverse;
+	flex-direction: row;
 	justify-content: center;
 	align-items: center;
+	direction: ltr;
 
 	&.kio-top-banner {
 		top: 0;
@@ -20,6 +21,10 @@
 		bottom: 0;
 	}
 
+	&.is-rtl {
+		direction: rtl;
+	}
+
 	.kio-description {
 		font-size: 1.2em;
 	}
@@ -27,11 +32,15 @@
 	.kio-btn {
 		display: inline-block;
 		padding: 2px 10px;
-		margin-right: 20px;
+		margin-left: 20px;
 		border-radius: 5px;
 		color: #fff;
 		background-color: #0080ff;
 		text-decoration: none;
+	}
+
+	&.is-rtl .kio-btn {
+		margin-right: 20px;
 	}
 
 	.kio-close-btn {
