--- a/kaseb-xyz/styles/main.scss
+++ b/kaseb-xyz/styles/main.scss
@@ -3,6 +3,10 @@
 @import './modal';
 @import './inspector-box';
 @import './animate.min.css';
+@import '../fonts/sahel/font-face';
+@import '../fonts/shabnam/font-face';
+@import '../fonts/vazir/font-face';
+@import '../fonts/iran-sans/font-face';
 
 #kio-app * {
 	box-sizing: border-box;
