--- a/kaseb-xyz/styles/banner.scss
+++ b/kaseb-xyz/styles/banner.scss
@@ -5,8 +5,7 @@
 	right: 0;
 	text-align: center;
 	min-height: 80px;
-	padding-top: 1rem;
-	padding-bottom: 1rem;
+	padding: 1rem 45px;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
@@ -32,15 +31,18 @@
 	.kio-btn {
 		display: inline-block;
 		padding: 2px 10px;
-		margin-left: 20px;
+		margin-left: 30px;
+		margin-right: 0;
 		border-radius: 5px;
 		color: #fff;
 		background-color: #0080ff;
 		text-decoration: none;
+		white-space: nowrap;
 	}
 
 	&.is-rtl .kio-btn {
-		margin-right: 20px;
+		margin-left: 0;
+		margin-right: 30px;
 	}
 
 	.kio-close-btn {
@@ -61,5 +63,3 @@
 		color: #333;
 	}
 }
-
-
