add prefix to font names

--- a/kaseb-xyz/fonts/sahel/font-face.scss
+++ b/kaseb-xyz/fonts/sahel/font-face.scss
@@ -1,5 +1,5 @@
 @font-face {
-	font-family: Sahel;
+	font-family: kio-Sahel;
 	src: url('../fonts/sahel/Sahel-FD.eot');
 	src: url('../fonts/sahel/Sahel-FD.eot?#iefix') format('embedded-opentype'),
 		url('../fonts/sahel/Sahel-FD.woff2') format('woff2'),
@@ -9,7 +9,7 @@
 }
 
 @font-face {
-	font-family: Sahel;
+	font-family: kio-Sahel;
 	src: url('../fonts/sahel/Sahel-Bold-FD.eot');
 	src: url('../fonts/sahel/Sahel-Bold-FD.eot?#iefix') format('embedded-opentype'),
 		url('../fonts/sahel/Sahel-Bold-FD.woff2') format('woff2'),
@@ -19,7 +19,7 @@
 }
 
 @font-face {
-	font-family: Sahel;
+	font-family: kio-Sahel;
 	src: url('../fonts/sahel/Sahel-Light-FD.eot');
 	src: url('../fonts/sahel/Sahel-Light-FD.eot?#iefix') format('embedded-opentype'),
 		url('../fonts/sahel/Sahel-Light-FD.woff2') format('woff2'),
@@ -29,7 +29,7 @@
 }
 
 @font-face {
-	font-family: Sahel;
+	font-family: kio-Sahel;
 	src: url('../fonts/sahel/Sahel-SemiBold-FD.eot');
 	src: url('../fonts/sahel/Sahel-SemiBold-FD.eot?#iefix') format('embedded-opentype'),
 		url('../fonts/sahel/Sahel-SemiBold-FD.woff2') format('woff2'),
@@ -39,7 +39,7 @@
 }
 
 @font-face {
-	font-family: Sahel;
+	font-family: kio-Sahel;
 	src: url('../fonts/sahel/Sahel-Black-FD.eot');
 	src: url('../fonts/sahel/Sahel-Black-FD.eot?#iefix') format('embedded-opentype'),
 		url('../fonts/sahel/Sahel-Black-FD.woff2') format('woff2'),
