--- a/kaseb-xyz/fonts/vazir/font-face.scss
+++ b/kaseb-xyz/fonts/vazir/font-face.scss
@@ -1,5 +1,5 @@
 @font-face {
-	font-family: Vazir;
+	font-family: kio-Vazir;
 	src: url('../fonts/vazir/Vazir-FD.eot');
 	src: url('../fonts/vazir/Vazir-FD.eot?#iefix') format('embedded-opentype'),
 		url('../fonts/vazir/Vazir-FD.woff2') format('woff2'),
@@ -9,7 +9,7 @@
 	font-style: normal;
 }
 @font-face {
-	font-family: Vazir;
+	font-family: kio-Vazir;
 	src: url('../fonts/vazir/Vazir-Bold-FD.eot');
 	src: url('../fonts/vazir/Vazir-Bold-FD.eot?#iefix')
 			format('embedded-opentype'),
@@ -20,7 +20,7 @@
 	font-style: normal;
 }
 @font-face {
-	font-family: Vazir;
+	font-family: kio-Vazir;
 	src: url('../fonts/vazir/Vazir-Black-FD.eot');
 	src: url('../fonts/vazir/Vazir-Black-FD.eot?#iefix')
 			format('embedded-opentype'),
@@ -31,7 +31,7 @@
 	font-style: normal;
 }
 @font-face {
-	font-family: Vazir;
+	font-family: kio-Vazir;
 	src: url('../fonts/vazir/Vazir-Medium-FD.eot');
 	src: url('../fonts/vazir/Vazir-Medium-FD.eot?#iefix')
 			format('embedded-opentype'),
@@ -42,7 +42,7 @@
 	font-style: normal;
 }
 @font-face {
-	font-family: Vazir;
+	font-family: kio-Vazir;
 	src: url('../fonts/vazir/Vazir-Light-FD.eot');
 	src: url('../fonts/vazir/Vazir-Light-FD.eot?#iefix')
 			format('embedded-opentype'),
@@ -53,7 +53,7 @@
 	font-style: normal;
 }
 @font-face {
-	font-family: Vazir;
+	font-family: kio-Vazir;
 	src: url('../fonts/vazir/Vazir-Thin-FD.eot');
 	src: url('../fonts/vazir/Vazir-Thin-FD.eot?#iefix')
 			format('embedded-opentype'),
