--- a/kaseb-xyz/fonts/iran-sans/font-face.scss
+++ b/kaseb-xyz/fonts/iran-sans/font-face.scss
@@ -1,5 +1,5 @@
 @font-face {
-	font-family: IRANSans;
+	font-family: kio-IRANSans;
 	font-style: normal;
 	font-weight: 900;
 	src: url('../fonts/iran-sans/IRANSansWeb(FaNum)_Black.eot');
@@ -9,7 +9,7 @@
 		 url('../fonts/iran-sans/IRANSansWeb(FaNum)_Black.ttf') format('truetype');
 }
 @font-face {
-	font-family: IRANSans;
+	font-family: kio-IRANSans;
 	font-style: normal;
 	font-weight: bold;
 	src: url('../fonts/iran-sans/IRANSansWeb(FaNum)_Bold.eot');
@@ -19,7 +19,7 @@
 		 url('../fonts/iran-sans/IRANSansWeb(FaNum)_Bold.ttf') format('truetype');
 }
 @font-face {
-	font-family: IRANSans;
+	font-family: kio-IRANSans;
 	font-style: normal;
 	font-weight: 500;
 	src: url('../fonts/iran-sans/IRANSansWeb(FaNum)_Medium.eot');
@@ -29,7 +29,7 @@
 		 url('../fonts/iran-sans/IRANSansWeb(FaNum)_Medium.ttf') format('truetype');
 }
 @font-face {
-	font-family: IRANSans;
+	font-family: kio-IRANSans;
 	font-style: normal;
 	font-weight: 300;
 	src: url('../fonts/iran-sans/IRANSansWeb(FaNum)_Light.eot');
@@ -39,7 +39,7 @@
 		 url('../fonts/iran-sans/IRANSansWeb(FaNum)_Light.ttf') format('truetype');
 }
 @font-face {
-	font-family: IRANSans;
+	font-family: kio-IRANSans;
 	font-style: normal;
 	font-weight: 200;
 	src: url('../fonts/iran-sans/IRANSansWeb(FaNum)_UltraLight.eot');
@@ -49,7 +49,7 @@
 		 url('../fonts/iran-sans/IRANSansWeb(FaNum)_UltraLight.ttf') format('truetype');
 }
 @font-face {
-	font-family: IRANSans;
+	font-family: kio-IRANSans;
 	font-style: normal;
 	font-weight: normal;
 	src: url('../fonts/iran-sans/IRANSansWeb(FaNum).eot');
