--- a/kaseb-xyz/fonts/shabnam/font-face.scss
+++ b/kaseb-xyz/fonts/shabnam/font-face.scss
@@ -1,5 +1,5 @@
 @font-face {
-	font-family: Shabnam;
+	font-family: kio-Shabnam;
 	src: url('../fonts/shabnam/Shabnam-FD.eot');
 	src: url('../fonts/shabnam/Shabnam-FD.eot?#iefix')
 			format('embedded-opentype'),
@@ -10,7 +10,7 @@
 }
 
 @font-face {
-	font-family: Shabnam;
+	font-family: kio-Shabnam;
 	src: url('../fonts/shabnam/Shabnam-Bold-FD.eot');
 	src: url('../fonts/shabnam/Shabnam-Bold-FD.eot?#iefix')
 			format('embedded-opentype'),
@@ -21,7 +21,7 @@
 }
 
 @font-face {
-	font-family: Shabnam;
+	font-family: kio-Shabnam;
 	src: url('../fonts/shabnam/Shabnam-Thin-FD.eot');
 	src: url('../fonts/shabnam/Shabnam-Thin-FD.eot?#iefix')
 			format('embedded-opentype'),
@@ -32,7 +32,7 @@
 }
 
 @font-face {
-	font-family: Shabnam;
+	font-family: kio-Shabnam;
 	src: url('../fonts/shabnam/Shabnam-Light-FD.eot');
 	src: url('../fonts/shabnam/Shabnam-Light-FD.eot?#iefix')
 			format('embedded-opentype'),
@@ -43,7 +43,7 @@
 }
 
 @font-face {
-	font-family: Shabnam;
+	font-family: kio-Shabnam;
 	src: url('../fonts/shabnam/Shabnam-Medium-FD.eot');
 	src: url('../fonts/shabnam/Shabnam-Medium-FD.eot?#iefix')
 			format('embedded-opentype'),
