add initial analytics

--- a/kaseb-xyz/styles/modal.scss
+++ b/kaseb-xyz/styles/modal.scss
@@ -1,5 +1,5 @@
 .kio-modal-container {
-	z-index: 999999;
+	z-index: 9999999;
 	background-color: rgba(0, 0, 0, 0.7);
 	transition: all 0.2s ease;
 	position: fixed;
