--- a/kaseb-xyz/styles/banner.scss
+++ b/kaseb-xyz/styles/banner.scss
@@ -1,4 +1,4 @@
-.kio-banner {
+div[class*='kio-banner-'] {
 	z-index: 999999;
 	position: fixed;
 	left: 0;
@@ -14,6 +14,22 @@
 
 	&.kio-top-banner {
 		top: 0;
+	}
+
+	&.kio-top-banner-prepend {
+		position: relative;
+		height: 0;
+		min-height: 0;
+		overflow: hidden;
+		padding: 0;
+		transition: 0.2s;
+	}
+
+	&.kio-top-banner-visible {
+		overflow: unset;
+		height: unset;
+		min-height: 80px;
+		padding: 1rem 45px;
 	}
 
 	&.kio-bottom-banner {
